# RTCW-SP

./: .gitignore  BUILD.md  CHANGES.md  CHANGES.txt  CMakeLists.txt  COPYING.txt  README_LINUX.md  README_SDL2_X64.md  RENDERER_ARCHITECTURE.md  VM_X64_MIGRATION.md  cmake_install.cmake  meson.build  meson_options.txt  wolfsp.in
build-gl/: CMakeCache.txt  Makefile  bsp_viewer_gl  cmake_install.cmake  wolfsp.x86_64
main/: 2d_frag.spv  2d_vert.spv  world_frag.spv  world_vert.spv
main/text/: rtcw.csf  rtcw.txt  rtcw_ru.csf  rtcw_ru.txt
main/ui/: bookp.menu  bookv.menu  bookz.menu  briefing.menu  clipboard.menu  controls.menu  credit.menu  default.menu  error.menu  hud.menu  in_rec_restart.menu  in_snd_restart.menu  in_vid_restart.menu  ingame.menu  ingame.txt  ingame_controls.menu  ingame_leave.menu  ingame_load.menu  ingame_options.menu  ingame_save.menu  ingame_system.menu  load.menu  main.menu  menus.txt  mods.menu  multiplayer_pop.menu  notebook.menu  options.menu  play.menu  pregame.menu  quit.menu  quitcredit.menu  rec_restart.menu  setup.menu  snd_restart.menu  system.menu  vid_restart.menu
src/botai/: ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  botai.h  chars.h  inv.h  match.h  syn.h
src/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_interface.c  (+17 more)
src/bspc/: _files.c  aas_areamerging.c  aas_areamerging.h  aas_cfg.c  aas_cfg.h  aas_create.c  aas_create.h  aas_edgemelting.c  aas_edgemelting.h  aas_facemerging.c  aas_facemerging.h  aas_file.c  aas_file.h  aas_gsubdiv.c  aas_gsubdiv.h  aas_map.c  aas_map.h  aas_prunenodes.c  aas_prunenodes.h  aas_store.c  aas_store.h  be_aas_bspc.c  be_aas_bspc.h  brushbsp.c  bspc.c  csg.c  faces.c  glfile.c  l_bsp_ent.c  l_bsp_ent.h  l_bsp_hl.c  l_bsp_hl.h  l_bsp_q1.c  l_bsp_q1.h  l_bsp_q2.c  l_bsp_q2.h  l_bsp_q3.c  l_bsp_q3.h  l_bsp_sin.c  l_bsp_sin.h  (+34 more)
src/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_flamethrower.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newDraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_syscalls.c  cg_trails.c  cg_view.c  cg_weapons.c  tr_types.h
src/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_splines_stub.c  cl_ui.c  client.h  keys.h  snd_adpcm.c  snd_dma.c  snd_local.h  snd_mem.c  snd_mix.c  snd_public.h  snd_wavelet.c
src/csf/: csf_load.c  csf_load.h
src/extractfuncs/: extractfuncs.c  l_log.c  l_log.h  l_memory.c  l_memory.h  l_precomp.c  l_precomp.h  l_script.c  l_script.h
src/game/: ai_cast.c  ai_cast.h  ai_cast_characters.c  ai_cast_debug.c  ai_cast_events.c  ai_cast_fight.c  ai_cast_fight.h  ai_cast_func_attack.c  ai_cast_func_boss1.c  ai_cast_funcs.c  ai_cast_global.h  ai_cast_script.c  ai_cast_script_actions.c  ai_cast_script_ents.c  ai_cast_sight.c  ai_cast_think.c  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_animation.c  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  botlib.h  g_active.c  g_alarm.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_func_decs.h  (+28 more)
src/idLib/: idAudio.h  idAudioHardware.h  idLib.h  idQ3Asnd.cpp  idSound.cpp  idSound.h  idSpeaker.cpp  idSpeaker.h
src/macosx/: CGMouseDeltaFix.h  CGPrivateAPI.h  Q3Controller.h  macosx_display.h  macosx_glimp.h  macosx_local.h  macosx_qgl.h  macosx_timers.h
src/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  md4.c  msg.c  net_chan.c  qcommon.h  qfiles.h  sys_x64.c  unzip.c  unzip.h  vm.c  vm_interpreted.c  vm_local.h  vm_x64.c  vm_x64.h  vm_x64_asm.S  vm_x86.c
src/renderer/: anorms256.h  ktx_load.c  ktx_load.h  qgl.h  qgl_linked.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_cmesh.c  tr_curve.c  tr_flares.c  tr_font.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_noise.c  tr_public.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_world.c
src/sdl2/: sdl_glimp.c  sdl_icon.h  sdl_input.c  sdl_local.h  sdl_main.c  sdl_shared.c  sdl_snd.c
src/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
src/splines/: math_angles.cpp  math_angles.h  math_matrix.cpp  math_matrix.h  math_quaternion.cpp  math_quaternion.h  math_vector.cpp  math_vector.h  q_parse.cpp  q_shared.cpp  q_shared.h  q_splineshared.h  splines.cpp  splines.h  util_list.h  util_str.cpp  util_str.h
src/sys/: sys_local.h
src/tools/: bsp_viewer_deform.h  bsp_viewer_gl.c  bsp_viewer_material.c  bsp_viewer_types.h
src/ui/: keycodes.h  ui_atoms.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c  ui_util.c
src/unix/: Conscript-cgame  Conscript-client  Conscript-game  Conscript-ui  Construct  buildinfo.h.in  linux_common.c  linux_glimp.c  linux_glimp_glfw.c  linux_joystick.c  linux_qgl.c  (+17 more)
src/vulkan/: CMakeLists.txt  meson.build  vk_init.c  vk_local.h  vk_material.c  vk_material.h  vk_math.c  vk_renderer.c  vk_renderer_draw.c  vk_sky.c  vk_sky.h  vk_surface.c
src/vulkan/shaders/: 2d_frag.glsl  2d_vert.glsl  world.frag  world.vert
(+18 files in other folders)
